Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-12323

DDL hang with SYNC_DDL=1 when CatalogD HA enabled

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • Impala 4.3.0
    • Impala 4.3.0
    • Backend
    • None

    Description

      When CatalogD HA is enabled, standby catalogd does not receive catalog topic update from statestore and does not apply catalog updates from the active catalogd. Its min topic version is not changed.
      Function Statestore::GetMinSubscriberTopicVersion() loops through all subscribers including standby catalogd to find min topic version. Standby catalogd causes min_subscriber_topic_version not increased, and hence Impala server waits indefinitely in ImpalaServer::WaitForCatalogUpdateTopicPropagation().

      To fix the issue, skip standby catalogd when finding min topic version in Statestore::GetMinSubscriberTopicVersion().

      Attachments

        Activity

          People

            wzhou Wenzhe Zhou
            wzhou Wenzhe Zhou
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: