IMPALA-12323: DDL hang with SYNC_DDL=1 when CatalogD HA enabled

When CatalogD HA is enabled, standby catalogd does not receive catalog
topic updates from statestore and does not apply catalog updates from
the active catalogd. Its min topic version is not changed.
Function Statestore::GetMinSubscriberTopicVersion() loops through all
subscribers to find min topic version. Standby catalogd causes
min topic version not increased, and hence Impala server waits
indefinitely in ImpalaServer::WaitForCatalogUpdateTopicPropagation().

This patch fixed the issue by skipping standby catalogd when finding min
topic version in Statestore::GetMinSubscriberTopicVersion().

Testing:
 - Added unit-test code for CatalogD HA to run DDL with SYNC_DDL as 1.
   Verified that test cases hang without fix, and test cases were passed
   after fix.
 - Passed test_catalogd_ha.py.

Change-Id: Ie559c711078f32171dfb2d2e2fda54773c0927c3
Reviewed-on: http://gerrit.cloudera.org:8080/20280
Reviewed-by: Andrew Sherman <asherman@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>